@@ -3,6 +3,7 @@
 
 	* parser.y: use position of last section when defining an implicit
 	  paragraph
+	* typeck.c: minor code refactoring
 
 2018-01-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
